2010-05-27  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: markDirtyInsteadOfDeletion property shall only consider specific pages - thus not clear all or pages cache
	* Cleanup: Fixed formatting and inline type hints
	* Fixed bug: Database element is not removed if clearing files did not succeed
	* Fixed bug: Pages with an endtime that would expire a page before the general expiration time is not considered
	* Fixed bug: Additional hash is not written for database elements
	* Fixed bug: Additional hash is not considered for lookups when empty

2010-05-25  Oliver Hader  <oliver@typo3.org>

	* Added feature: Integrate hook to post process the cache scenario after (no matter whether static cache was written)

2010-04-30  Oliver Hader  <oliver@typo3.org>

	* Added feature: Integrate hook to handle deleting a static cached directory

2010-04-19  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #5290: Expect the scheme name at first position and allow to modifiy with hook

2010-04-15  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature of predefining/extending values that are stored in the database
	* Added feature: Add additionalhash to implement individual and more specific database elements (utilized by hooks)
	* Fixed bug: removeExpiredPages triggeres clearing cache of a page multiple times

2010-04-14  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Moved logging part of writing cache files to accordant place
	* Cleanup: Moved information that determine whether a page is cachable and added to them to hook parameters
	* Cleanup: Moved implementation to write compressed content to separate method
	* Cleanup: Extended parameters of createFile_processContent hook by URI and hostname
	* Cleanup: Renamed internal variable name
	* Added feature: Add possibility to predefine/extend values that are stored in the database

2010-02-22  Michiel Roos  <michiel@netcreators.com>

	* Updated the manual

2010-02-20  Michiel Roos  <michiel@netcreators.com>
